k8s/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-api-deployment
  namespace: api
  labels:
    app: trips-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: trips-api
  template:
    metadata:
      labels:
        app: trips-api
    spec:
      containers:
      - name: trips
        image: registryvba6423.azurecr.io/tripinsights/trips:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: trips-api-service
  namespace: api
  labels:
    app: trips-api
spec:
  selector:
    app: trips-api
  ports:
  - port: 80
    protocol: TCP
  type: ClusterIP
