k8s/user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-deployment
  namespace: api
  labels:
    app: user-java
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        image: registryvba6423.azurecr.io/tripinsights/user-java:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: user-java-service
  namespace: api
  labels:
    app: user-java
spec:
  selector:
    app: user-java
  ports:
  - port: 80
    protocol: TCP
  type: ClusterIP
