k8s/userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile-deployment
  namespace: api
  labels:
    app: userprofile
spec:
  replicas: 3
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile
        image: registryvba6423.azurecr.io/tripinsights/userprofile:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: api
  labels:
    app: userprofile
spec:
  selector:
    app: userprofile
  ports:
  - port: 80
    protocol: TCP
  type: ClusterIP
