k8s/ingress_poi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poi-ingress
  namespace: api
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /api/poi
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/poi
        pathType: Prefix
        backend:
          service:
            name: poi
            port:
              number: 80
